SLCORE-658 Create NodeJs service